# shuyu12457

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
public/maps/: china.json
src/: consts.ts  content.config.ts
src/assets/article-index/: article-indexer-cli
src/assets/wasm/article-filter/: article_filter.js  article_filter_bg.wasm
src/assets/wasm/geo/: geo_wasm.js  geo_wasm_bg.wasm
src/assets/wasm/search/: search_wasm.js  search_wasm_bg.wasm
src/components/: ArticleFilter.tsx  Breadcrumb.astro  Countdown.tsx  DoubanCollection.tsx  Footer.astro  GitProjectCollection.tsx  Header.astro  Layout.astro  Search.tsx  ThemeToggle.astro  WereadBookList.tsx  WorldHeatmap.tsx  swup-init.js
src/content/: echoes博客使用说明.md  常用软件.md
src/content/android/: Android安装linux.md  Android热点开机自启动和VPN热点.md  一加6t刷3系统思路.md  安装谷歌三件套服务框架.md
src/content/docker/: Docker安装typecho.md  Docker部署gitea.md  Docker部署思源笔记.md  密码管理器—Vaultwarden(bitwarden).md  网盘直链程序—AList.md
src/content/linux/: Linux美化终端zsh+ohmyzsh.md  SSH使用小技巧.md  linux实现定时备份网站到网盘.md  ms17-010（永恒之蓝）漏洞复现.md  开启系统自带的TCP-BBR加速.md
src/content/web/: web技术思路.md  各大搜索引擎站长平台地址汇总.md
src/content/web/前端与美化/: hugo-theme-stack美化教程.md  markdown使用教程.md  svg文字动画.css  svg文字动画.mdx  用rust实现第一个wasm.md
src/content/web/加速与防护/: CDN配置.md  Cloudflare_自选IP.md  GitHub-Actions自动刷新多吉云_CDN缓存.md  使用宝塔面板受到CC攻击后自动开启 Cloudflare 经典的 5 秒盾.md  宝塔面板下站点如何只限定CDN的IP节点回源请求.md
src/content/web/部署/: nginx配置.md  哪吒面板-服务器状态监控面板-Linux与Windows部署.md  将hugo部署在vercel.md  搭建Chevereto中文版.md  搭建本地图床API可搭配Chevereto使用.md  服务器探针（ServerStatus探针）安装教程.md
src/content/windows/: Adobe_Photoshop (Beta)使用教程.md  Windows11部分程序中文乱码解决方案[通用解决Windows10].md  Windows用批处理处理图标上的快捷方式和安全盾.md  Windows虚拟化和子系统安装指南.md  vscode配置.md  windows安装adb教程.md  在VMware虚拟机上安装MacOS系统.md  解决Win11右键菜单问题.md  计算机意外的重新启动或遇到错误.md
src/content/代理/: 3x-ui配置.md  X-UI面板快速搭建和配置.md  centos7.x搭建Tor私人网桥.md  v2board后端对接-XrayR-V2ray-ws-tls-cdn.md  v2board后端对接-soga.md  v2board后端对接-套cloudfront解决被墙和提升速度.md  v2board后端对接v2ray-warp使用Cloudflare-WARP解锁chatgpt-流媒体.md  一键搭建Telegram的MTProto代理.md  安装谷歌三件套服务框架.md  搭建v2board前端.md
src/content/旅行笔记/: 第一次出国旅行-东南亚.mdx
src/pages/: 404.astro  about.astro  books.astro  filtered.astro  index.astro  movies.astro  projects.astro
src/pages/api/: douban.ts  git-projects.ts  weread.ts
src/pages/articles/: [...id].astro  [...path].astro  index.astro
src/plugins/: build-article-index.js  rehype-code-blocks.js  rehype-tables.js  robots-integration.js  rss-integration.js  sitemap-integration.js
src/styles/: articles-code.css  articles-mermaid.css  articles-table.css  articles.css  global.css  header.css  swup-transitions.css  theme-toggle.css
wasm/: Cargo.toml  readme.md
wasm/article-filter/: Cargo.toml
wasm/article-filter/src/: builder.rs  lib.rs  models.rs
wasm/article-indexer/: Cargo.toml
wasm/article-indexer/src/: main.rs
wasm/geo/: Cargo.toml
wasm/geo/src/: lib.rs
wasm/search/: Cargo.toml
wasm/search/src/: builder.rs  lib.rs  models.rs
wasm/utils-common/: Cargo.toml
wasm/utils-common/src/: compression.rs  lib.rs  models.rs
