[workspace]
members = [
    "article-filter",
    "article-indexer",
    "geo",
    "search",
]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
geojson = "0.24.2"
geo = "0.26"
geo-types = "0.7.16"
js-sys = "0.3.77"
kdtree = "0.7"
chrono = { version = "0.4.40", features = ["serde", "wasmbind"] }
bincode = { version = "2.0.1", features = ["serde"] }
flate2 = "1.1.1"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.77", features = ["console"] }
regex = "1.11.1"
clap = { version = "4.5.37", features = ["suggestions", "color"] }
walkdir = "2.5.0"
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
once_cell = "1.21.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
overflow-checks = false
